tests/ui/rfc-2627-raw-dylib/raw-dylib-windows-only.stderr
error[E0455]: link kind `raw-dylib` is only supported on Windows targets
  --> $DIR/raw-dylib-windows-only.rs:3:29
   |
LL | #[link(name = "foo", kind = "raw-dylib")]
   |                             ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0455`.
