tests/ui/rfc-2627-raw-dylib/raw-dylib-windows-only.rs
// ignore-windows
// compile-flags: --crate-type lib
#[link(name = "foo", kind = "raw-dylib")]
//~^ ERROR: link kind `raw-dylib` is only supported on Windows targets
extern "C" {}
